# age_verification_django_middleware

./: README.md  pyproject.toml
src/age_verification_psehack/: apps.py  db.py  middleware.py  settings.py  urls.py  views.py
src/age_verification_psehack/static/age_verification_psehack/: bundle.js  main.js
